--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/MainFragment"
-        android:name="mba.vm.onhit.ui.MainFragment"
-        tools:layout="@layout/fragment_main">
+        android:name="mba.vm.onhit.ui.FragmentNdefFilePicker"
+        tools:layout="@layout/fragment_ndef_file_picker">
     </fragment>
 </navigation>
