--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -15,7 +15,7 @@
         android:id="@+id/icon"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@android:drawable/ic_menu_save"
+        android:src="@drawable/baseline_nfc_24"
         android:contentDescription="@null"
         app:tint="?android:attr/textColorSecondary" />
 
