--- a/app/src/main/res/layout/dialog_generic_input.xml
+++ b/app/src/main/res/layout/dialog_generic_input.xml
@@ -8,30 +8,27 @@
     android:padding="24dp">
 
     <TextView
-        android:id="@+id/dialog_title"
+        android:id="@+id/tv_dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="8dp"
-        android:gravity="center"
-        android:text="@string/ndef_filename_input_hint"
+        android:gravity="center_vertical"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:drawableStartCompat="@drawable/baseline_nfc_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/ndef_name_input"
+        android:id="@+id/et_dialog_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:importantForAutofill="no"
-        android:hint="@string/ndef_filename_input_hint"
         android:inputType="text"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dialog_title" />
+        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_dialog_cancel"
@@ -42,7 +39,7 @@
         android:text="@android:string/cancel"
         android:textAllCaps="false"
         app:layout_constraintEnd_toStartOf="@+id/btn_dialog_confirm"
-        app:layout_constraintTop_toBottomOf="@id/ndef_name_input" />
+        app:layout_constraintTop_toBottomOf="@id/et_dialog_input" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_dialog_confirm"
