--- a/app/src/main/res/menu/top_app_bar_menu.xml
+++ b/app/src/main/res/menu/top_app_bar_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/search_ndef_record"
@@ -10,7 +9,6 @@
     <item
         android:id="@+id/add_ndef_record"
         android:icon="@drawable/baseline_add_24"
-        android:title="@string/add_ndef_record"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
+        android:title="@string/add"
+        app:showAsAction="always" />
 </menu>
