--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <resources>
-    <style name="Base.Theme.OnHit" parent="Theme.Material3.DayNight.NoActionBar">
-    </style>
+    <style name="Base.Theme.OnHit" parent="android:Theme.DeviceDefault.Light.NoActionBar" />
 
     <style name="Theme.OnHit" parent="Base.Theme.OnHit" />
 
