--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -8,26 +8,11 @@
       android:translateX="102.04153"
       android:translateY="93.94559">
     <path
-        android:pathData="M122.62,79L226.62,79A12,12 0,0 1,238.62 91L238.62,195A12,12 0,0 1,226.62 207L122.62,207A12,12 0,0 1,110.62 195L110.62,91A12,12 0,0 1,122.62 79z"
-        android:strokeWidth="8"
-        android:fillColor="#00000000"
-        android:strokeColor="#fff"/>
-    <path
-        android:pathData="M176.62,91h2v52h-8v-46c0,-3.31 2.69,-6 6,-6Z"
+        android:pathData="M226.62,211h-104c-8.82,0 -16,-7.18 -16,-16v-104c0,-8.82 7.18,-16 16,-16h104c8.82,0 16,7.18 16,16v104c0,8.82 -7.18,16 -16,16ZM122.62,83c-4.41,0 -8,3.59 -8,8v104c0,4.41 3.59,8 8,8h104c4.41,0 8,-3.59 8,-8v-104c0,-4.41 -3.59,-8 -8,-8h-104Z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M174.62,143m-24,0a24,24 0,1 1,48 0a24,24 0,1 1,-48 0"
+        android:pathData="M233.53,0H88.1c-9.1,0 -16.5,7.4 -16.5,16.5v253c0,9.1 7.4,16.5 16.5,16.5h173.03c9.1,0 16.5,-7.4 16.5,-16.5V44.11L233.53,0ZM261.13,273H88.1c-1.93,0 -3.5,-1.57 -3.5,-3.5V16.5c0,-1.93 1.57,-3.5 3.5,-3.5h135.43v42.99h41.1v213.51c0,1.93 -1.57,3.5 -3.5,3.5Z"
         android:fillColor="#fff"/>
-    <path
-        android:strokeWidth="1"
-        android:pathData="M269.04,55.99l-45.51,0 -0,-45.51c-0,-3.54 4.28,-5.31 6.78,-2.81l41.54,41.54c2.5,2.5 0.73,6.78 -2.81,6.78Z"
-        android:fillColor="#fff"
-        android:strokeColor="#fff"/>
-    <path
-        android:pathData="M230.84,6.5H88.1c-5.52,0 -10,4.48 -10,10v253c0,5.52 4.48,10 10,10h173.03c5.52,0 10,-4.48 10,-10V46.8L230.84,6.5Z"
-        android:strokeWidth="13"
-        android:fillColor="#00000000"
-        android:strokeColor="#fff"/>
     <path
         android:pathData="M198.62,104h-10.01l-6,6h25.01v66h-66v-66h21l6,-6h-27c-3.31,0 -6,2.69 -6,6v66c0,3.31 2.69,6 6,6h66c3.31,0 6,-2.69 6,-6v-66c0,-3.31 -2.69,-6 -6,-6h-9Z"
         android:fillColor="#fff"/>
@@ -35,19 +20,19 @@
         android:pathData="M171.53,91l0,0.03l0.03,-0.03l-0.03,0z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M221.56,91h-44.46v6h44.46v92h-92v-92h29.97l6,-6h-35.97c-3.31,0 -6,2.69 -6,6v92c0,3.31 2.69,6 6,6h92c3.31,0 6,-2.69 6,-6v-92c0,-3.31 -2.69,-6 -6,-6Z"
+        android:pathData="M221.56,91h-44.94c-3.31,0 -6,2.69 -6,6v22.34c-11.35,1.91 -20,11.77 -20,23.66 0,13.25 10.75,24 24,24s24,-10.75 24,-24c0,-11.89 -8.65,-21.76 -20,-23.66v-22.34h42.94v92h-92v-92h29.97l6,-6h-35.97c-3.31,0 -6,2.69 -6,6v92c0,3.31 2.69,6 6,6h92c3.31,0 6,-2.69 6,-6v-92c0,-3.31 -2.69,-6 -6,-6Z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M304.64,181.45l-12.89,-12.89c3.32,-3.32 5.92,-7.16 7.8,-11.53 1.88,-4.37 2.83,-9.05 2.83,-14.02s-0.94,-9.65 -2.83,-14.02c-1.88,-4.37 -4.49,-8.22 -7.8,-11.53l12.89,-12.89c4.82,4.82 8.67,10.52 11.53,17.07s4.3,13.68 4.3,21.37c0,7.54 -1.43,14.59 -4.3,21.14s-6.71,12.33 -11.53,17.3Z"
+        android:pathData="M304.64,181.45l-12.89,-12.89c3.32,-3.32 5.92,-7.16 7.8,-11.53 1.88,-4.37 2.83,-9.05 2.83,-14.02s-0.94,-9.65 -2.83,-14.02c-1.88,-4.37 -4.49,-8.22 -7.8,-11.53l12.89,-12.89c4.82,4.82 8.67,10.52 11.53,17.07s4.3,13.68 4.3,21.37 -1.43,14.59 -4.3,21.14 -6.71,12.33 -11.53,17.3Z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M330.19,207l-12.89,-12.89c6.63,-6.63 11.84,-14.32 15.6,-23.07s5.65,-18.09 5.65,-28.04c0,-10.1 -1.88,-19.52 -5.65,-28.27s-8.97,-16.36 -15.6,-22.84l12.89,-12.89c8.14,8.14 14.59,17.68 19.34,28.61 4.75,10.93 7.12,22.73 7.12,35.39 0,12.51 -2.37,24.24 -7.12,35.17 -4.75,10.93 -11.19,20.54 -19.34,28.83Z"
+        android:pathData="M330.19,207l-12.89,-12.89c6.63,-6.63 11.84,-14.32 15.6,-23.07s5.65,-18.09 5.65,-28.04 -1.88,-19.52 -5.65,-28.27 -8.97,-16.36 -15.6,-22.84l12.89,-12.89c8.14,8.14 14.59,17.68 19.34,28.61 4.75,10.93 7.12,22.73 7.12,35.39s-2.37,24.24 -7.12,35.17c-4.75,10.93 -11.19,20.54 -19.34,28.83Z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M40.48,164.14c-2.86,-6.56 -4.3,-13.61 -4.3,-21.14 0,-7.69 1.43,-14.81 4.3,-21.37s6.71,-12.25 11.53,-17.07l12.89,12.89c-3.32,3.32 -5.92,7.16 -7.8,11.53 -1.88,4.37 -2.83,9.05 -2.83,14.02s0.94,9.65 2.83,14.02 4.49,8.22 7.8,11.53l-12.89,12.89c-4.82,-4.98 -8.67,-10.74 -11.53,-17.3Z"
+        android:pathData="M40.48,164.14c-2.86,-6.56 -4.3,-13.61 -4.3,-21.14s1.43,-14.81 4.3,-21.37 6.71,-12.25 11.53,-17.07l12.89,12.89c-3.32,3.32 -5.92,7.16 -7.8,11.53 -1.88,4.37 -2.83,9.05 -2.83,14.02s0.94,9.65 2.83,14.02 4.49,8.22 7.8,11.53l-12.89,12.89c-4.82,-4.98 -8.67,-10.74 -11.53,-17.3Z"
         android:fillColor="#fff"/>
     <path
-        android:pathData="M7.12,178.17C2.37,167.24 -0,155.51 0,143c0,-12.66 2.37,-24.46 7.12,-35.39 4.75,-10.93 11.19,-20.47 19.34,-28.61l12.89,12.89c-6.63,6.48 -11.84,14.1 -15.6,22.84s-5.65,18.17 -5.65,28.27c-0,9.95 1.88,19.3 5.65,28.04s8.97,16.43 15.6,23.07l-12.89,12.89c-8.14,-8.29 -14.59,-17.9 -19.34,-28.83Z"
+        android:pathData="M7.12,178.17C2.37,167.24 0,155.51 0,143s2.37,-24.46 7.12,-35.39c4.75,-10.93 11.19,-20.47 19.34,-28.61l12.89,12.89c-6.63,6.48 -11.84,14.1 -15.6,22.84s-5.65,18.17 -5.65,28.27 1.88,19.3 5.65,28.04 8.97,16.43 15.6,23.07l-12.89,12.89c-8.14,-8.29 -14.59,-17.9 -19.34,-28.83Z"
         android:fillColor="#fff"/>
   </group>
 </vector>
