--- a/app/src/main/res/layout/bottom_dialog_input.xml
+++ b/app/src/main/res/layout/bottom_dialog_input.xml
@@ -20,7 +20,9 @@
         android:id="@+id/et_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autofillHints=""
+        android:importantForAutofill="no"
+        android:autofillHints="textFilter|textNoSuggestions"
+        android:privateImeOptions="nm"
         android:hint="@string/hint_input_name"
         android:inputType=""
         android:singleLine="true"
